# ardagvmotor-fw

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  west.yml  zephyr.code-workspace
boards/: native_sim.conf  native_sim.overlay
boards/adi/ardagvmotor/: Kconfig.ardagvmotor  ardagvmotor.dts  ardagvmotor_A.overlay  ardagvmotor_B.overlay  ardagvmotor_defconfig  board.cmake  board.yml
dts/bindings/: adi,tmc9660-spi.yaml
dts/bindings/can/: adi,max32-can.yaml
objdict/: AGV_CIA402_ProfileVelocity_Barebones.eds  AGV_CIA402_ProfileVelocity_Barebones.xdd  AGV_Lifter.eds  AGV_Lifter.xdd  OD.c  OD.h  ardagvmotor.eds  ardagvmotor.xdd  node16.dcf
src/: CO_config_custom.h  cia402.c  cia402.h  demos.c  main.c  nesimtit.c  nesimtit.h  storage.c  storage.h  tmc9660.c  tmc9660.h  tmc9660_params.c  tmc9660_params.h
tools/: control.py
tools/arduino_can_controller/: arduino_can_controller.ino
tools/arduino_crsf_can/: arduino_crsf_can.ino
tools/working-python-motorcontrol/: ardagvmotor.eds  can_config.sh  spin.py
